# InputSoftwareInC-

./: CMakeLists.txt  README.md  chars.txt  config.is  config_d.is  dic.txt  dic_d.txt  handleWord.txt  library.is  library_d.is  main.cpp  readme.txt  result.txt  smallDic.txt  three_country_story.txt  wordsDic.txt
model/: CharacterPair.cpp  CharacterPair.h  PinyinNode.cpp  PinyinNode.h  PinyinTireTree.cpp  PinyinTireTree.h  PinyinTrieTree.cpp  PinyinTrieTree.h  WordPair.cpp  WordPair.h
